--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-  <string name="app_name">Imgur Shenanigans</string>
+  <string name="app_name">Imgur</string>
+  <string name="error_get_album">Error retrieving album images</string>
 </resources>
