--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
   <string name="app_name">Imgur</string>
   <string name="error_get_album">Error retrieving album images</string>
   <string name="error_loading_gallery">Error loading gallery</string>
+  <string name="subreddit_nav_hint">/r/pics</string>
 </resources>
